<resources>
    <string name="app_name">Weatherful.</string>

    <string name="location_activity_header">Locations</string>
    <string name="add_location_activity_header">Add Location</string>
    <string name="forecast_screen_title">Forecast</string>

    <string name="add_location_message">Help us by entering the data below and we will do the rest for you!</string>

    <!-- Toasts -->
    <string name="successful_adding">Location added!</string>
    <string name="invalid_input">Please provide a valid input!</string>
    <string name="duplication_when_adding">Location already exists!</string>
    <string name="successful_deleting">Location deleted!</string>
    <string name="cant_save_location">Something went wrong when adding!</string>

    <!-- Display parameters -->
    <string name="wind_speed_field">%1$s m/s</string>
    <string name="rain_chance_field">%1$d%%</string>
    <string name="degree_symbol">℃</string>
    <string name="single_temperature_field">%1$d℃</string>
    <string name="temperature_field">%1$d℃/%2$d℃</string>
    <string name="humidity_field">%1$d%%</string>
    <string name="missing_network">Missing network connection!</string>
    <string name="try_again">Try again later</string>

    <!-- Hints -->
    <string name="hint_et_country">Country</string>
    <string name="hint_et_city">Village / City</string>
    <string name="done">Done</string>
    <string name="cannot_determine_current_location">Can\'t determine current location. Tap and enable your GPS connection</string>

    <!-- Permission dialog -->
    <string name="permission_dialog_title">Permission needed</string>
    <string name="permission_dialog_message">This permission is needed in order to show weather for your current location.</string>
    <string name="permission_dialog_accept_button">OK</string>
    <string name="permission_dialog_deny_button">Cancel</string>

    <string name="toast_permission_denied">Location permission denied!</string>
    <string name="toast_permission_never_ask">Never asking again for location permission!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="developer_name">Developed by: Stoyan Ivanov</string>
    <string name="email_contact">For any questions or problems please contact me at: stoyaniviv@gmail.com</string>
    <string name="powered_by_text">Weatherful is powered by: Dark Sky</string>
    <string name="app_version">Version: %s</string>
    <string name="about_screen_title">About</string>
</resources>
